# WaveEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  opengl.sln  opengl.vcxproj  opengl.vcxproj.filters
WaveEngine/src/: AllMetaRegister.hpp  AllSerializer.hpp  Application_impl.cpp  Application_impl.hpp  CMakeLists.txt  Engine.hpp  EngineAPI.cpp  EngineAPI.hpp  GlobalContext.cpp  GlobalContext.hpp  View.cpp  View_impl.hpp  Window.cpp  Window.hpp  Window_impl.cpp  Window_impl.hpp
WaveEngine/src/Core/: Common.hpp  Logger.cpp  Logger.hpp  Math.hpp  Matrix.hpp  Slot.hpp  Utils.hpp  Vector.hpp
WaveEngine/src/Core/Logger/: Logger.cpp  Logger.hpp
WaveEngine/src/Core/Math/: Math.hpp  Matrix.hpp  Vector.hpp
WaveEngine/src/Core/Meta/: Meta.hpp  MetaType.cpp  MetaType.hpp  Serializer.cpp  Serializer.hpp  Serializer.inl
WaveEngine/src/Core/Signal/: Signal.hpp  Slot.hpp
WaveEngine/src/Core/Timer/: Timer.cpp
WaveEngine/src/Core/Utils/: Utils.hpp
WaveEngine/src/Editor/: ImGuiEditor.cpp  ImGuiEditor.hpp  ImGuiViewRect.cpp  ImGuiViewRect.hpp  ViewRect.cpp  ViewRect.hpp
WaveEngine/src/GUI/: Application.cpp  Application.hpp  FileDialog.cpp  FileDialog.hpp  Window.cpp  Window.hpp
WaveEngine/src/GUI/Editor/: ImGuiCanvas.cpp  ImGuiCanvas.hpp  ImGuiContextMenu.cpp  ImGuiContextMenu.hpp  ImGuiDebugWindow.cpp  ImGuiDebugWindow.hpp  ImGuiEditor.cpp  ImGuiEditor.hpp  ImGuiGlobalConsole.cpp  ImGuiGlobalConsole.hpp  ImGuiImGuiViewPortWindow.cpp  ImGuiInput.cpp  ImGuiInput.hpp  ImGuiSceneHierarchy.cpp  ImGuiSceneHierarchy.hpp  ImGuiToolbar.cpp  ImGuiToolbar.hpp  ImGuiViewPortWindow.cpp  ImGuiViewPortWindow.hpp
WaveEngine/src/GamePlay/Framework/: GObject.hpp  GameObject.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp
WaveEngine/src/GamePlay/Input/: InputSystem.cpp  InputSystem.hpp
WaveEngine/src/GamePlay/RayTracing/: Hittable.hpp
WaveEngine/src/GamePlay/Render/: RenderPipeline.cpp  RenderPipeline.hpp  RenderSystem.cpp  RenderSystem.hpp
WaveEngine/src/Logical/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.hpp  Texture.cpp  Texture.hpp
WaveEngine/src/Logical/Animation/: Animation.hpp  AnimationSystem.hpp
WaveEngine/src/Logical/Framework/: IDAllocator.hpp  Scene.cpp  Scene.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp
WaveEngine/src/Logical/Gcode/: GcodeViewer.cpp  GcodeViewer.hpp  GcodeViewerInstancing.hpp  SimpleMesh.cpp  SimpleMesh.hpp
WaveEngine/src/Logical/Input/: CameraManipulator.cpp  CameraManipulator.hpp  InputEnums.hpp  InputSystem.cpp  InputSystem.hpp  PickingSolver.cpp  PickingSolver.hpp
WaveEngine/src/Platform/OS/: FileDialog.hpp
WaveEngine/src/Platform/RHI/: rhi.hpp
WaveEngine/src/Render/: RenderShaderObject.cpp  RenderShaderObject.hpp  RenderSourceData.cpp  RenderSourceData.hpp  RenderSystem.cpp  RenderSystem.hpp
WaveEngine/src/Render/Gcode/: GcodeViewerInstancingPass.cpp  GcodeViewerInstancingPass.hpp  GcodeViewerPass.cpp  GcodeViewerPass.hpp
WaveEngine/src/Render/GcodeViewer/: GcodeViewer.cpp  GcodeViewer.hpp  GcodeViewerPass.cpp  GcodeViewerPass.hpp
WaveEngine/src/Render/Pass/: BloomPass.cpp  BloomPass.hpp  BlurPass.cpp  BlurPass.hpp  BrightPass.cpp  BrightPass.hpp  CheckerBoardPass.cpp  CheckerBoardPass.hpp  CombinePass.cpp  CombinePass.hpp  DeferredLightingPass.cpp  DeferredLightingPass.hpp  EdgeDetectionPass.cpp  EdgeDetectionPass.hpp  GBufferPass.cpp  GBufferPass.hpp  LightingPass.cpp  LightingPass.hpp  MainCameraPass.cpp  MainCameraPass.hpp  MeshForwardLightingPass.cpp  MeshForwardLightingPass.hpp  NormalPass.cpp  NormalPass.hpp  OutlinePass.cpp  OutlinePass.hpp  PickingPass.cpp  PickingPass.hpp  RayTracingPass.cpp  RayTracingPass.hpp  RenderPass.hpp  ScreenPass.cpp  ScreenPass.hpp  ShadowPass.cpp  ShadowPass.hpp  SkyBoxPass.cpp  SkyBoxPass.hpp  TransparentPass.cpp  TransparentPass.hpp  WireFramePass.cpp  (+3 more)
WaveEngine/src/Render/Path/: DeferredRenderPath.cpp  DeferredRenderPath.hpp  ForwardRenderPath.cpp  ForwardRenderPath.hpp  GcodeRenderPath.cpp  GcodeRenderPath.hpp  RayTracingRenderPath.cpp  RayTracingRenderPath.hpp  RenderPath.hpp
WaveEngine/src/Render/RHI/: Viewport.hpp  rhi.cpp  rhi.hpp  rhi_impl.hpp
WaveEngine/src/ResourceManager/: AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  Common.cpp  Common.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshData.cpp  MeshData.hpp  MyModel.cpp  MyModel.hpp  ObjImporter.cpp  ObjImporter.hpp  ResourceImporter.cpp  ResourceImporter.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
WaveEngine/src/ResourceManager/Gcode/: GcodeData.cpp  GcodeData.hpp  GcodeImporter.cpp  GcodeImporter.hpp  GcodeReader.cpp  GcodeReader.hpp  GcodeResult.hpp  GcodeResultData.cpp  GcodeResultData.hpp
WaveEngine/src/ResourceManager/Structure/: Material.hpp  MeshData.hpp  Shader.hpp  Texture.cpp  Texture.hpp
engine/: Application.cpp  CMakeLists.txt
engine/Core/: Logger.cpp  Logger.hpp
engine/GamePlay/Framework/: SceneHierarchy.cpp  SceneHierarchy.hpp
engine/GamePlay/RayTracing/: Hittable.hpp
engine/GamePlay/Render/: RenderSystem.cpp
engine/ResourceManager/: Material.cpp  Material.hpp  Shader.cpp  Shader.hpp
engine/include/: Engine.hpp  IScene.hpp
engine/resource/shader/: BRDF.h  BlinnPhong.h  billBoard.fs  common.h  cubeMap.fs  deferredLighting_pbr.fs  deferredLighting_phong.fs  explode.gs  extractBright.fs  fowardLighting_phong.fs  gBuffer_phong.fs  gaussianBlur.fs  gcode.fs  gcode.vs  gcodeInstancing.vs  normal.fs  normal.gs  oit_blend.fs  oit_linkedList.fs  outline.fs  pristineGrid.fs  pristineGrid.vs  rayTracing.fs  screenQuad.vs  wireframe.fs  wireframe2.vs
engine/src/: AllMetaRegister.hpp  AllSerializer.hpp  CMakeLists.txt  Engine.cpp  GlobalContext.cpp  GlobalContext.hpp
engine/src/GUI/: Window.cpp
engine/src/Logical/: Material.cpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Texture.cpp
engine/src/Render/: RenderParams.hpp  RenderShaderObject.cpp  RenderShaderObject.hpp  RenderSourceData.cpp  RenderSourceData.hpp  RenderSystem.hpp
engine/src/ResourceManager/: AssetImporter.hpp  ResourceImporter.hpp
lib/: glfw3.lib
test/: CMakeLists.txt  main.cpp  test.cpp
(+478 files in other folders)
